<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#efeff4"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="#fff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/set_boot_start"
            android:textColor="#333"
            android:textSize="16dp" />

        <ToggleButton
            android:id="@+id/setting_tg_boot"
            android:layout_width="54dp"
            android:layout_height="34dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/toggle_selector"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/set_boot_start_dec"
        android:textColor="#999"
        android:textSize="12dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="#fff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/set_auto_resume"
            android:textColor="#333"
            android:textSize="16dp" />

        <ToggleButton
            android:id="@+id/setting_tg_resume"
            android:layout_width="54dp"
            android:layout_height="34dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/toggle_selector"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/set_auto_resume_dec"
        android:textColor="#999"
        android:textSize="12dp" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="35dp"
        android:clickable="true"
        android:background="@drawable/selector_btn_close"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/set_close"
        android:id="@+id/setting_close" />

</LinearLayout>
